--- a/cubic.ipynb
+++ b/cubic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,37 +16,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 188,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4.96387966e-13 6.17033268e-13 7.24648333e-13 8.10575188e-13\n",
-      " 8.75642290e-13 9.20151342e-13 9.43432164e-13 9.48341069e-13\n",
-      " 9.37022148e-13 9.12123985e-13 8.75597776e-13 8.31615472e-13\n",
-      " 7.81655927e-13 7.26874033e-13 6.71251318e-13 6.13895031e-13\n",
-      " 5.58749605e-13 5.05300657e-13 4.53206914e-13 4.05151579e-13\n",
-      " 3.60439740e-13 3.18608946e-13 2.80853656e-13 2.45942316e-13\n",
-      " 2.15240022e-13 1.87641343e-13 1.62639314e-13 1.40980780e-13\n",
-      " 1.21728476e-13 1.04526288e-13 8.98984936e-14 7.68163239e-14\n",
-      " 6.57323382e-14 5.59986105e-14 4.76176137e-14 4.05349419e-14\n",
-      " 3.41546021e-14 2.89736672e-14 2.45346323e-14 2.06841714e-14\n",
-      " 1.75261505e-14 1.43458726e-14]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data = np.loadtxt('cmb_derivada.txt').T\n",
-    "x=data[0]\n",
-    "y=data[1]\n",
-    "print(data[1])"
+    "#data = np.loadtxt('cmb_derivada.txt').T\n",
+    "#x=data[0]\n",
+    "#y=data[1]\n",
+    "#print(data[1])\n",
+    "x = np.array([0.9,1.3,1.9,2.1,2.6,3.0,3.9,4.4,4.7,5.0,6.0,7.0,8.0,9.2,10.5,11.3,11.6,12.0,12.6,13.0,13.3])\n",
+    "y = np.array([1.3,1.5,1.85,2.1,2.6,2.7,2.4,2.15,2.05,2.1,2.25,2.3,2.25,1.95,1.4,0.9,0.7,0.6,0.5,0.4,0.25])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,11 +43,10 @@
     "    i=0\n",
     "    a=b\n",
     "    x=n\n",
-    "    h=[None] * long\n",
+    "    h=[None] * lesslong\n",
     "    l=[None] * long\n",
-    "    u=[None] * long\n",
+    "    u=[None] * lesslong\n",
     "    z=[None] * long\n",
-    "    l=[None] * long\n",
     "    c=[None] * long\n",
     "    d=[None] * long\n",
     "    l[0]=1\n",
@@ -73,26 +56,33 @@
     "    z[lesslong]=0\n",
     "    c[lesslong]=0\n",
     " \n",
-    "    for i in range (0, long):\n",
+    "    for i in range (0, lesslong):\n",
     "        h[i]=x[i+1]-x[i]\n",
-    "        \n",
+    "    #print(h)\n",
+    "    #print(a)\n",
     "    for i in range (1, lesslong):\n",
-    "        a[i]=(3/(h[i])*((a[i+1]-a[i])))-((3/h[i-1])*(a[i]-a[i-1]))\n",
+    "        a[i]=((3/(h[i]))*((a[i+1]-a[i])))-((3/(h[i-1]))*(a[i]-a[i-1]))\n",
+    "    #print(a)\n",
     "    for i in range (1,lesslong):\n",
     "        l[i]=(2*(x[i+1]-x[i-1]))-h[i]*-u[i-1]\n",
     "        u[i]=h[i]/l[i]\n",
-    "        z[i]=(a[i]-h[i-1]-z[i-1])/(l[1])\n",
-    "  \n",
+    "        z[i]=(a[i]-(h[i-1]*z[i-1]))/(l[i])\n",
+    "    #print(l)\n",
+    "    print(u)\n",
+    "    #print(z)\n",
     "    for j in range(evenlesslong,0,-1):\n",
     "        c[j]=z[j]-((u[j])*(c[j+1]))\n",
-    "        b[j]=(a[j+1]-a[j])/h[j]-(h[j](c[j+1]+2*c[j]))/3\n",
-    "        d[j]=(c[j+1]-c[j])/3(h[j])\n",
+    "        b[j]=((a[j+1]-a[j])/h[j])-(h[j]*(c[j+1]+2*c[j]))/3\n",
+    "        d[j]=(c[j+1]-c[j])/3*(h[j])\n",
+    "    print(c)\n",
+    "    print(b)\n",
+    "    print(z)\n",
     "    return (a,b,c,d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,26 +91,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
-   "metadata": {},
+   "execution_count": 191,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "index 42 is out of bounds for axis 0 with size 42",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-250-672cda2030bf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhera\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-248-d198b2aeba8e>\u001b[0m in \u001b[0;36mhera\u001b[0;34m(n, b)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlong\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m         \u001b[0mh\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlesslong\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 42 is out of bounds for axis 0 with size 42"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0.3, 0.12048192771084347, 0.3424092409240923, 0.20650877491906627, 0.323060268375922, 0.16883164355749436, 0.181746640495153, 0.23913452582617292, 0.3522200131425634, 0.22976779597085215, 0.2364195975373801, 0.2562075066521567, 0.24376204678215474, 0.18202462929491592, 0.13306086083626545, 0.27524999946458917, 0.277117058905398, 0.1894974071709194, 0.20592384952301462]\n",
+      "[None, -16.41867520941857, 55.14558403139523, -479.33334746058, 1216.4265472824657, -7232.788082508902, 17751.697626254154, -131026.28578311828, 442383.0499408691, -4657655.8469245285, 4850077.956162055, -43884433.27064739, 113678542.3464807, -622462261.2169067, 2150599232.07934, -13324924170.489267, 84177909770.95334, -429455157052.8749, 946287176610.0052, -9438763645386.908, 0]\n",
+      "[1.30000000e+00 1.46810548e+18 8.80863288e+17 1.76172658e+17\n",
+      " 8.80863288e+16 3.52345315e+16 3.17110784e+16 1.58555392e+16\n",
+      " 4.75666175e+15 1.42699853e+15 1.42699852e+15 1.42699848e+15\n",
+      " 1.42699841e+15 1.71239767e+15 2.22611690e+15 1.78089026e+15\n",
+      " 5.34263795e+14 2.13641503e+14 1.27819713e+14 4.88470497e+13\n",
+      " 2.50000000e-01]\n",
+      "[0, 0.12500000000000058, -2.605421686746988, -62.817656765676496, -277.20765888567024, -1497.9198832430177, -4369.6855517436625, -50624.65264436584, -671423.2724749298, -2949361.3254626724, -5233151.55386453, -17008598.040456407, -45800961.58496642, -98227790.59711652, -274865150.436834, -2124139032.9687343, -34029621977.91553, -167222837790.81726, -842334061089.9491, -9438763645386.908, 0]\n"
      ]
     }
    ],
    "source": [
     "f=hera(x,y)\n",
-    "print(f)"
+    "#print(f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
