--- a/Universe.ipynb
+++ b/Universe.ipynb
@@ -45,19 +45,8 @@
     "def H(a):\n",
     "    return np.sqrt((Omega_m/(a**3))+(Omega_r/(a**4))+Omega_lamb)\n",
     "\n",
-    "ecue= lambda x: 1/(x*H(x))\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "ecue= lambda x: 1/(x*H(x))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -83,15 +72,6 @@
     "for i in range(100):\n",
     "    y[i]= ecue(x[i])\n",
     "    test[i]=simpsos(x[i],y[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#print(test)"
    ]
   },
   {
@@ -149,6 +129,22 @@
     "xscale('log')\n",
     "show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
