--- a/rungekutta.ipynb
+++ b/rungekutta.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -103,10 +103,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f47a6f89c88>]"
+       "[<matplotlib.lines.Line2D at 0x7f47a6eea940>]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -137,7 +137,7 @@
     "        k3=h*f(x + 0.5 * h, y + 0.5 * k2)\n",
     "        k4=h*f(x + h, y + k3)\n",
     "        vx[i] = x = x0 + i * h\n",
-    "        vy[i] = y = y + (k1 + k2 + k2 + k3 + k3 + k4) / 6 #error\n",
+    "        vy[i] = y = y + (k1 + 2*k2 + 2*k3 + k4) / 6 #error\n",
     "    return vx ,vy\n",
     " \n",
     "\n",
